--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>        
-        <meta charset="utf-8">
-        <title>Min price</title>
-    </head>
-    <body>        
-        <h1>Minimal price project!</h1>
-        {{ ola }}
-    </body>
+<head>
+    <title>Minimal price</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <script src="https://api-maps.yandex.ru/2.1/?apikey={{YANDEX_MAPS_API_KEY}}&lang=ru_RU" type="text/javascript"></script>
+    <script src="static/geolocation.js" type="text/javascript"></script>
+
+</head>
+<body>
+    <p>Яндекс карты</p>
+    <div id="map" style="width: 600px; height: 400px"></div>
+    <p>Конец</p>
+</body>
 </html>
