--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Minimal price</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script src="https://api-maps.yandex.ru/2.1/?apikey={{YANDEX_MAPS_API_KEY}}&lang=ru_RU" type="text/javascript"></script>
-    <script src="static/geolocation.js" type="text/javascript"></script>
 
+<head>
+    <title>Определение адреса клика на карте с помощью обратного геокодирования</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="static/css/styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> 
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey={{YANDEX_MAPS_API_KEY}}" type="text/javascript"></script>
+    <script src="static/scripts/event_reverse_geocode.js" type="text/javascript"></script>
+    
 </head>
 <body>
-    <p>Яндекс карты</p>
+    <p class="header">Кликните по карте, чтобы указать адрес</p>
     <div id="map" style="width: 600px; height: 400px"></div>
-    <p>Конец</p>
+    <div id="ola"></div>
+
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#ola").text(myPlacemark);   
+        })
+    </script>
+
 </body>
 </html>
