--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Определение адреса клика на карте с помощью обратного геокодирования</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="static\css\styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> 
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey={{YANDEX_MAPS_API_KEY}}" type="text/javascript"></script>
     <script src="static/scripts/event_reverse_geocode.js" type="text/javascript"></script>
@@ -12,14 +12,20 @@
 <body>
     <p class="header">Кликните по карте, чтобы указать адрес</p>
     <div id="map" style="width: 600px; height: 400px"></div>
-    <div id="ola"></div>
+    <div id="adress_box">Ищем доставку по адресу <span id="address_confirm"></span></div>
+    <div id="shop-box"><p>shop-box</p></div>
 
 
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $("#ola").text(myPlacemark);   
-        })
-    </script>
+<script> 
+let response = await fetch(url);
 
+if (address_confirm) { // если HTTP-статус в диапазоне 200-299
+  // получаем тело ответа (см. про этот метод ниже)
+  let json = await response.json();
+  consol.log('response.ok')
+} else {
+  alert("Ошибка HTTP: " + response.status);
+} 
+</script>
 </body>
 </html>
