added listening to div content changes
when the content changes an  alert is  triggered

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 
     <script>
-
+document.getElementById("address_confirm").addEventListener("DOMSubtreeModified", function() {
+  alert('Содержимое окна изменилось');
+});
     </script>
 
 </body>
