Add text to market's logo
The positioning of blocks for stores has been changed

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div id="map" style="width: 600px; height: 400px"></div>
     <div id="adress_box">Ищем доставку по адресу <span id="address_confirm"></span></div>
     блок полученный с сервера: <span id="shop-box"></span>
+    <div  id = 'markets'>
+
+    </div>
 
 
 
