--- a/static/urls/store.html
+++ b/static/urls/store.html
@@ -1,11 +1,85 @@
-<h1>Ola!!</h1>
-hello world   
-{{ store_id }}
-{{ market_name }}
-{% if categories %}
-    <ul>
+<!doctype html>
+<html lang="ru">
+<head>
+  <title>Товары, доступные в {{ market.name }}</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="static\css\styles.css">
+  <!-- Bootstrap CSS (jsDelivr CDN) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+</head>
+<body>
+  <img src="{{ market.logo_image }}" alt="market_logo">
+
+  {% if categories %}
+    <div class="accordion" id="accordionParent">
     {% for category in categories %}
-    <li>{{ category.name }}</p>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="{{ category.id }}">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse-{{ category.id }}" aria-expanded="true" aria-controls="panelsStayOpen-collapse-{{ category.id }}">
+            <img src="{{ category.icon_url }}" alt="category image">
+            {{ category.name }}
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapse-{{ category.id }}" class="accordion-collapse collapse" aria-labelledby="{{ category.id }}">
+          <div class="accordion-body">
+            {% if categories.children %} 
+              three-thour
+              <div class="accordion" id="accordionChild">
+              {% for child in categories.appearance.children %}
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="{{ child.id }}">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse-{{ child.id }}" aria-expanded="true" aria-controls="panelsStayOpen-collapse-{{ child.id }}">
+                      One-Two
+                      
+                        {{ child.name }}
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapse-{{ child.id }}" class="accordion-collapse collapse" aria-labelledby="{{ child.id }}">
+                    <div class="accordion-body">
+                      Ola!!
+                    </div>
+                  </div>
+                </div>
+              {% endfor %}
+            </div>
+            {% else %}
+            categories.children is not found!
+            {% endif %}
+        </div>
+      </div>
+    </div>
     {% endfor %}
-    </ul>
-{% endif %}
+    </div>
+  {% endif %}
+
+  {% if categories %}
+    <div class="accordion" id="accordionParent">
+    {% for category in categories %}
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="{{ category.id }}">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse-{{ category.id }}" aria-expanded="true" aria-controls="panelsStayOpen-collapse-{{ category.id }}">
+            <img src="{{ category.icon_url }}" alt="category image">
+            {{ category.name }}
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapse-{{ category.id }}" class="accordion-collapse collapse" aria-labelledby="{{ category.id }}">
+          <div class="accordion-body">
+            Ola!
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+    </div>
+  {% endif %}
+
+
+
+{{ market }}
+<br>
+{{ categories[0] }}
+</body>
+</html>
