--- a/static/urls/store.html
+++ b/static/urls/store.html
@@ -4,7 +4,7 @@
   <title>Товары, доступные в {{ market.name }}</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="static\css\styles.css">
+  <link rel="stylesheet" href="http://localhost:8080\static\css\styles.css">
   <!-- Bootstrap CSS (jsDelivr CDN) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
@@ -30,7 +30,7 @@
               <div class="accordion" id="accordionChild">
               {% for child in category.children %}
                 <div class="accordion-item">
-                  <h2 class="accordion-header" id="{{ child.id }}">
+                  <h2 class="accordion-header" id="{{ child.id }}" onclick="give('{{ child.canonical_url }}')">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse-{{ child.id }}" aria-expanded="true" aria-controls="panelsStayOpen-collapse-{{ child.id }}">
                  
                         {{ child.name }}
@@ -78,16 +78,12 @@
 
 
 <br>
-{{ categories[0].children[0] }}
 
-<script type="text/javascript" src="./static/scripts/product_list.js"></script>
+<script type="text/javascript" src="http://localhost:8080/static/scripts/product_list.js"></script>
 <script>
-  /*
-        document.getElementById("address_confirm").addEventListener("DOMSubtreeModified", function() {
-            pass
-        });
-        */
-        onClick="alert(this. id);"
+  function give(url) {
+    send_id(url);
+  }
 </script>
 
 </body>
