Product list is displayed on the page
Problem: Product list is displayed on the page all products is displayed on the first opened list, when we clicked on the subcategories

--- a/static/urls/store.html
+++ b/static/urls/store.html
@@ -38,7 +38,9 @@
                   </h2>
                   <div id="panelsStayOpen-collapse-{{ child.id }}" class="accordion-collapse collapse" aria-labelledby="{{ child.id }}">
                     <div class="accordion-body">
-                      Ola!!
+                      <div  id = 'products'>
+
+                      </div>
                     </div>
                   </div>
                 </div>
