--- a/static/urls/store.html
+++ b/static/urls/store.html
@@ -4,7 +4,7 @@
   <title>Товары, доступные в {{ market.name }}</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://localhost:8080\static\css\styles.css">
+  <link rel="stylesheet" href="http://localhost:8080/static/css/styles.css">
   <!-- Bootstrap CSS (jsDelivr CDN) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
@@ -18,7 +18,7 @@
     <div class="accordion" id="accordionParent">
     {% for category in categories %}
       <div class="accordion-item">
-        <h2 class="accordion-header" id="{{ category.id }}">
+        <h2 class="accordion-header" id="{{ category.id }}" onclick="give('{{ category.canonical_url }}', '{{ market.store_id }}', '{{ category.id }}')">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse-{{ category.id }}" aria-expanded="true" aria-controls="panelsStayOpen-collapse-{{ category.id }}">
             <img src="{{ category.icon_url }}" alt="category image">
             {{ category.name }}
@@ -30,15 +30,15 @@
               <div class="accordion" id="accordionChild">
               {% for child in category.children %}
                 <div class="accordion-item">
-                  <h2 class="accordion-header" id="{{ child.id }}" onclick="give('{{ child.canonical_url }}', '{{ market.store_id }}', '{{ market.retailer }}')">
+                  <h2 class="accordion-header" id="{{ child.id }}" onclick="give('{{ child.canonical_url }}', '{{ market.store_id }}', '{{ child.id }}')">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse-{{ child.id }}" aria-expanded="true" aria-controls="panelsStayOpen-collapse-{{ child.id }}">
                  
                         {{ child.name }}
                     </button>
                   </h2>
                   <div id="panelsStayOpen-collapse-{{ child.id }}" class="accordion-collapse collapse" aria-labelledby="{{ child.id }}">
-                    <div class="accordion-body">
-                      <div  id = 'products'>
+                    <div class="accordion-body" >
+                      <div  id = 'products-{{ child.id }}'  style="height:100px;">
 
                       </div>
                     </div>
@@ -47,7 +47,10 @@
               {% endfor %}
             </div>
             {% else %}
-            categories.children is not found!
+            <div ></div>
+            <div  id = 'products-{{ category.id }}'>
+
+            </div>
             {% endif %}
         </div>
       </div>
@@ -55,36 +58,11 @@
     {% endfor %}
     </div>
   {% endif %}
-<!--
-  {% if categories %}
-    <div class="accordion" id="accordionParent">
-    {% for category in categories %}
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="{{ category.id }}">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse-{{ category.id }}" aria-expanded="true" aria-controls="panelsStayOpen-collapse-{{ category.id }}">
-            <img src="{{ category.icon_url }}" alt="category image">
-            {{ category.name }}
-          </button>
-        </h2>
-        <div id="panelsStayOpen-collapse-{{ category.id }}" class="accordion-collapse collapse" aria-labelledby="{{ category.id }}">
-          <div class="accordion-body">
-            Ola!
-        </div>
-      </div>
-    </div>
-    {% endfor %}
-    </div>
-  {% endif %}
-  -->
-
-
-
-<br>
 
 <script type="text/javascript" src="http://localhost:8080/static/scripts/product_list.js"></script>
 <script>
-  function give(url, store_id, retailer) {
-    send_url(url, store_id, retailer);
+  function give(url, store_id, category_id) {
+    send_url(url, store_id, category_id);
   }
 </script>
 
