--- a/static/urls/store.html
+++ b/static/urls/store.html
@@ -80,7 +80,12 @@
       <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Закрыть"></button>
     </div>
     <div class="offcanvas-body">
-      <p>Попробуйте прокрутить оставшуюся часть страницы, чтобы увидеть этот параметр в действии.</p>
+      <ul id="shoping_cart_list">
+
+      </ul>
+      <p id="total_price">
+
+      </p>
     </div>
   </div>
   
@@ -92,12 +97,38 @@
 </script>
 
 <script>
-  function add_to_cart(id, name, price){
-    //let ul = document.getElementsByClassName('offcanvas-body')[0];
-    //console.log(ul);
-    while (true) {
-      console.log('ola');
-    }
+  function add_to_cart(id, product_name, price){
+    // функция отрисовывает товары в корзине
+    let ul  = document.getElementById('shoping_cart_list');
+    let li = document.createElement('li');
+    li.setAttribute('id', `product_cart_id_${id}`);
+    li.innerHTML = `
+                    ${product_name} - 
+                    <span class='cart_price'> ${price}</span> руб   
+                    <button type='button' class='btn btn-outline-primary' 
+                      onclick='del_from_cart(this.parentNode.id)'>
+                      X
+                    </button>`;
+    ul.appendChild(li);
+    let p = document.getElementById('total_price');
+    p.innerHTML = `Итог: ${pluser()} руб`;
+
+  }
+
+  function pluser(){
+    // функция возвращает сумму цены товаров в корзине
+    var els = document.getElementsByClassName('cart_price');
+    return Array.prototype.slice.call(els).reduce( addMe, 0);
+  }
+
+  function addMe(p,c){
+    // p - предыдущее значение общей суммы, c - очередной элемент массива
+    return p + parseFloat(c.textContent);
+  }
+
+  function del_from_cart(id){
+    let el = document.getElementById(id);
+    el.remove();
   }
 </script>
 
