--- a/static/urls/store.html
+++ b/static/urls/store.html
@@ -6,9 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://localhost:8080/static/css/styles.css">
   <!-- Bootstrap CSS (jsDelivr CDN) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+    crossorigin="anonymous">
   <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
+    crossorigin="anonymous">
+  </script>
 
 </head>
 <body>
@@ -16,7 +21,10 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Sticky top</a>
       <img src="{{ market.logo_image }}" alt="market_logo">
-      <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">Корзина</button>
+      <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" 
+        data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">
+        Корзина
+      </button>
     </div>
   </nav>
   
@@ -25,27 +33,40 @@
     <div class="accordion" id="accordionParent">
     {% for category in categories %}
       <div class="accordion-item">
-        <h2 class="accordion-header" id="{{ category.id }}" onclick="give('{{ category.canonical_url }}', '{{ market.store_id }}', '{{ category.id }}')">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse-{{ category.id }}" aria-expanded="true" aria-controls="panelsStayOpen-collapse-{{ category.id }}">
+        <h2 class="accordion-header" id="{{ category.id }}" 
+          onclick="give('{{ category.canonical_url }}', '{{ market.store_id }}', '{{ category.id }}')">
+          <button class="accordion-button" type="button" 
+            data-bs-toggle="collapse" 
+            data-bs-target="#panelsStayOpen-collapse-{{ category.id }}" 
+            aria-expanded="true" aria-controls="panelsStayOpen-collapse-{{ category.id }}">
             <img src="{{ category.icon_url }}" alt="category image">
             {{ category.name }}
           </button>
         </h2>
-        <div id="panelsStayOpen-collapse-{{ category.id }}" class="accordion-collapse collapse" aria-labelledby="{{ category.id }}">
+        <div id="panelsStayOpen-collapse-{{ category.id }}" 
+          class="accordion-collapse collapse" aria-labelledby="{{ category.id }}">
           <div class="accordion-body">
             {% if category.children %} 
               <div class="accordion" id="accordionChild">
               {% for child in category.children %}
                 <div class="accordion-item">
-                  <h2 class="accordion-header" id="{{ child.id }}" onclick="give('{{ child.canonical_url }}', '{{ market.store_id }}', '{{ child.id }}')">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse-{{ child.id }}" aria-expanded="true" aria-controls="panelsStayOpen-collapse-{{ child.id }}">
-                 
-                        {{ child.name }}
+                  <h2 class="accordion-header" id="{{ child.id }}" 
+                    onclick="give('{{ child.canonical_url }}', '{{ market.store_id }}', '{{ child.id }}')">
+                    <button class="accordion-button" type="button" 
+                      data-bs-toggle="collapse" 
+                      data-bs-target="#panelsStayOpen-collapse-{{ child.id }}" 
+                      aria-expanded="true" 
+                      aria-controls="panelsStayOpen-collapse-{{ child.id }}">                 
+                      {{ child.name }}
                     </button>
                   </h2>
-                  <div id="panelsStayOpen-collapse-{{ child.id }}" class="accordion-collapse collapse" aria-labelledby="{{ child.id }}">
+                  <div id="panelsStayOpen-collapse-{{ child.id }}" 
+                    class="accordion-collapse collapse" 
+                    aria-labelledby="{{ child.id }}">
                     <div class="accordion-body" >
-                      <div  id = 'products-{{ child.id }}' class="card-group row row-cols-xs-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-6 row-cols-xl-8 row-cols-xxl-10 ">
+                      <div  id = 'products-{{ child.id }}' 
+                        class="card-group row row-cols-xs-1 row-cols-sm-2 row-
+                        cols-md-4 row-cols-lg-6 row-cols-xl-8 row-cols-xxl-10 ">
                         
                       </div>
                     </div>
@@ -54,7 +75,9 @@
               {% endfor %}
             </div>
             {% else %}
-            <div  id = 'products-{{ category.id }}' class="card-group row row-cols-xs-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-6 row-cols-xl-8 row-cols-xxl-10" >
+            <div  id = 'products-{{ category.id }}' 
+              class="card-group row row-cols-xs-1 row-cols-sm-2 row-cols-md-4 
+              row-cols-lg-6 row-cols-xl-8 row-cols-xxl-10" >
 
             </div>
             {% endif %}
@@ -65,28 +88,43 @@
     </div>
   {% endif %}
 
-  <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+  <div class="offcanvas offcanvas-start" data-bs-scroll="true" 
+    data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" 
+    aria-labelledby="offcanvasScrollingLabel">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Товары в корзине</h5>
-      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Закрыть"></button>
+      <h5 class="offcanvas-title" id="offcanvasScrollingLabel">
+        Товары в корзине
+      </h5>
+      <button type="button" class="btn-close text-reset" 
+        data-bs-dismiss="offcanvas" aria-label="Закрыть">
+      </button>
     </div>
     <div class="offcanvas-body">
       <ul id="shoping_cart_list">
       </ul>
       <p id="total_price">
       </p>
-      <a class="btn btn-primary" href="http://localhost:8080/static/urls/compare.html" role="button">Сравнить цену</a>
+      <a class="btn btn-primary" href="#" onclick="go_to_comparison()" 
+        role="button">
+        Сравнить цену
+      </a>
     </div>
   </div>
   
-<script type="text/javascript" src="http://localhost:8080/static/scripts/product_list.js"></script>
+<script type="text/javascript" 
+  src="http://localhost:8080/static/scripts/product_list.js">
+</script>
+
 <script>
   function give(url, store_id, category_id) {
+    // функция отправляет категорию продуктов для получения списка 
+    // продуктов для категории 
     send_url(url, store_id, category_id);
 }
 </script>
 
-<script>
+<script type="text/javascript">
+  
   function add_to_cart(id, product_name, price){
     // функция отрисовывает товары в корзине
     let ul  = document.getElementById('shoping_cart_list');
@@ -125,6 +163,20 @@
     minus.innerHTML -= child.textContent;
     parent.remove();
   }
+
+  class Product_on_basket {
+    // класс содержит характеристики продукта в корзине 
+    static counter = 0;
+
+    constructor(id, name, price) {
+      this.id = id;
+      this.name = name;
+      this.price = price;
+      ++Product_on_basket.counter;
+    }
+
+  }
+
 </script>
 
 </body>
